--- a/index.css
+++ b/index.css
@@ -1,10 +1,32 @@
+@media (max-width: 900px){
+  .startButton1, .startButton2, {
+    display: block;
+    height: 50%;
+    margin: auto;
+    }
+.traitForm, .characterForm{
+  width: 100%;
+  margin: 10px;
+}
+  }
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
 body{
   font-family: Artifika;
   margin: 0;
 }
-
-
 form{
  background-color: white;
  padding:0;
@@ -16,10 +38,13 @@ form{
  font-weight: bold;
  border: 1px solid black;
 }
+fieldset{
+  border: 0;
+}
 form:input{
   background-color: #C0392B;
 }
-#cultureSelection, #characterSearch{
+.cultureSelection, #characterSearch{
   text-align: center;
   display: block;
   margin: auto;
@@ -52,19 +77,19 @@ h1{
   background-image: url(http://highlighthollywood.com/wp-content/uploads/2014/07/GOTSeasonfourfinale.png)
 }
 .startPage{
- margin: 10px;
+ margin-top: 10px;
  text-align: center;
  font-size: 0;
 }
 .startButton1, .startButton2{
   font-family: Artifika;
+  margin: auto;
+  width: 35%;
+  height: 250px;
   background-position: center center;
   background-size: cover;
-  color:white; 
-  font-size: 4vw; 
-  display: inline-block;
-  width: 35vw;
-  height: 35vh; 
+  color:white;
+  font-size: 4vw;
   border:1px solid black;
   border-radius: 5%;
 }
@@ -72,18 +97,9 @@ h1{
   border: 3px solid #C0392B;
   zoom: 1.1
 }
-button > img{
-  border:0;
-  padding:0;
-  width: 100%;
-  height: 100%;
-  vertical-align: middle;
-  text-align: center;
-}
-html { 
-  background: url(https://s-media-cache-ak0.pinimg.com/originals/af/dc/d8/afdcd8e60e9babe40290e4ecf92d7365.jpg) no-repeat center center fixed; 
+html {
+  background: url(https://s-media-cache-ak0.pinimg.com/originals/af/dc/d8/afdcd8e60e9babe40290e4ecf92d7365.jpg) no-repeat center center fixed;
   background-size: cover;
-
 }
 .parent{
   margin: 5px;
@@ -114,7 +130,7 @@ h4{
   text-align: center;
   font-size:20px;
   color:#C0392B;
-  margin:0; 
+  margin:0;
   border-top: 1px solid #C0392B;
 }
 .tvSeriesHeader{
@@ -158,7 +174,8 @@ button{
  background-color: #C0392B;
  width: 75px;
  border: 1px solid black;
-}
+}*/
+
 button:hover{
   background-color: #E74C3C;
 }
